Spacing fix for upload progress

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -249,7 +249,7 @@ div.react-md-tab button.active {
   width: 150px;
   height: 7px;
   background-color: #ddd;
-  margin: 0 10px 0 3px;
+  margin: 0 4px 0 6px;
 }
 
 .react-md-progress-value {
